Time: 20 ms (79.85%), Space: 43.1 MB (68.84%) - LeetHub