@@ -1,11 +1,12 @@
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
         Arrays.sort(nums);
-        List<List<Integer>> res = new ArrayList<>();
         int n = nums.length;
+        List<List<Integer>> res = new ArrayList<>();
+        
         for (int i = 0; i < n; i++)
         {
-            if (i == 0 || nums[i - 1] != nums[i])
+            if (i == 0 || nums[i] != nums[i - 1])
             {
                 int lo = i + 1;
                 int hi = n - 1;
@@ -23,10 +24,11 @@ class Solution {
                     }
                     else
                     {
-                        res.add(Arrays.asList(nums[i], nums[lo], nums[hi]));
+                        res.add(List.of(nums[i], nums[lo], nums[hi]));
                         lo++;
                         hi--;
-                        while (lo < hi && nums[lo - 1] == nums[lo])
+                        
+                        while (lo < hi && nums[lo] == nums[lo - 1])
                             lo++;
                     }
                 }
